--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- CSS Include -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/main.css" />
 
     <!-- Animation JS Include -->
@@ -45,6 +46,8 @@
         <div class="row mt-4">
           <div class="col-md-4">
             <h1>Service One</h1>
+            <a class="test-popup-link" href="assets/images/hero.jpg">Open popup</a>
+
           </div>
         </div>
       </div>
@@ -66,6 +69,10 @@
 
     <!-- JS Include -->
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Magnific Popup -->
+    <script src="assets/js/jquery.magnific-popup.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
