--- a/String/index.html
+++ b/String/index.html
@@ -10,9 +10,14 @@
     <h1>String Method </h1>
     
     <script>
-        console.log("String..");
         // String
-        let someString = "Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse magni nesciunt quos, consequuntur doloribus voluptatum natus vero vel dolorum placeat cumque? Nobis sapiente soluta quo eos atque asperiores vero. Doloremque dolore deleniti ea odio sapiente eligendi laboriosam officia est vitae?"
+        let str = "Strings are useful for holding data that can be represented in text form. Some of the most-used operations on strings are to check their length, to build and concatenate them using the + and += string operators, checking for the existence or location of substrings with the indexOf() method, or extracting substrings with the substring() method."
+        console.log(str);
+
+
+        // 1. Length 
+        let strLength = str.length;
+        console.log("1. Length :-> " + strLength);
 
     </script>
 </body>
