--- a/String/index.html
+++ b/String/index.html
@@ -10,13 +10,22 @@
     <h1>String Method </h1>
     
     <script>
-        // String
-        let str = "Strings are useful for holding data that can be represented in text form. Some of the most-used operations on strings are to check their length, to build and concatenate them using the + and += string operators, checking for the existence or location of substrings with the indexOf() method, or extracting substrings with the substring() method."
+        // Creating String Methods
+        const str1 = "This is a string with double quotes.";
+        const str2 = "This is a string with single quotes.";
+        const str3 = "This is a string with template literals."
+        const str4 = new String("This is a string with string objects.")
+
+        const str = "Strings are useful for holding data that can be represented in text form. Some of the most-used operations on strings are to check their length, to build and concatenate them using the + and += string operators, checking for the existence or location of substrings with the indexOf() method, or extracting substrings with the substring() method."
         console.log(str);
+        console.log(str1);
+        console.log(str2);
+        console.log(str3);
+        console.log(str4);
 
 
         // 1. Length 
-        let strLength = str.length;
+        const strLength = str.length;
         console.log("1. Length :-> " + strLength);
 
     </script>
