string substr metho add .

--- a/String/index.html
+++ b/String/index.html
@@ -17,16 +17,20 @@
         const str4 = new String("This is a string with string objects.")
 
         const str = "Strings are useful for holding data that can be represented in text form. Some of the most-used operations on strings are to check their length, to build and concatenate them using the + and += string operators, checking for the existence or location of substrings with the indexOf() method, or extracting substrings with the substring() method."
-        console.log(str);
-        console.log(str1);
-        console.log(str2);
-        console.log(str3);
-        console.log(str4);
+        // console.log(str);
+        // console.log(str1);
+        // console.log(str2);
+        // console.log(str3);
+        // console.log(str4);
 
 
         // 1. Length 
         const strLength = str.length;
         console.log("1. Length :-> " + strLength);
+
+        // 2. substr -> Sub String 
+        const subStr = str.substr(0, 100);
+        console.log("Sub String:- " + subStr);
 
     </script>
 </body>
