string indexof method add..

--- a/String/index.html
+++ b/String/index.html
@@ -26,11 +26,21 @@
 
         // 1. Length 
         const strLength = str.length;
-        console.log("1. Length :-> " + strLength);
+        console.log("1. Length :- " + strLength);
 
         // 2. substr -> Sub String 
         const subStr = str.substr(0, 100);
-        console.log("Sub String:- " + subStr);
+        console.log("Sub String :- " + subStr);
+
+        // 3. charAt -> Character access
+        const characterAccess = str.charAt(8)
+        const characterAccess2 = str[5]
+        // console.log(characterAccess);
+        // console.log(characterAccess2);
+
+        // 4. indexOf -> Location accessed of string 
+        const strIndex = str.indexOf("are")
+        console.log(strIndex);
 
     </script>
 </body>
