last index of string method added.

--- a/String/index.html
+++ b/String/index.html
@@ -35,15 +35,19 @@
         console.log(characterAccess);
         // console.log(characterAccess2);
 
-        // 4. indexOf -> Location accessed of string 
+        // 4. indexOf(searchValue, fromIndex(optional)) -> Location accessed of string 
         const strIndex = str.indexOf("are")
+        const strIndex2 = str.indexOf("z")
         console.log(strIndex);
+        console.log(strIndex2);
 
         // 5. replace("which", "what") -> String replace
         const strReplace = str1.replace('quotes', 'HiHiHi')
         console.log(strReplace);
 
-        // 6. 
+        // 6. lastIndexof(substr, fromIndex)
+        const strLastIndexOf = str.lastIndexOf("are");
+        console.log(strLastIndexOf);
 
 
     </script>
