--- a/String/index.html
+++ b/String/index.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>String</title>
-  </head>
-  <body>
-    <h1>String Method</h1>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>String</title>
+    </head>
+    <body>
+        <h1>String Method</h1>
 
-    <script>
-      // Creating String Methods
-      const str1 = "This is a string with double quotes.";
-      const str2 = "This is a string with single quotes.";
-      const str3 = "This is a string with template literals.";
-      const str4 = new String("This is a string with string objects.");
+        <script>
+            // Creating String Methods
+            const str1 = "This is a string with double quotes.";
+            const str2 = "This is a string with single quotes.";
+            const str3 = "This is a string with template literals.";
+            const str4 = new String("This is a string with string objects.");
 
-      const str =
-        "Strings are useful for holding data that can be represented in text form. Some of the most-used operations on strings are to check their length, to build and concatenate them using the + and += string operators, checking for the existence or location of substrings with the indexOf() method, or extracting substrings with the substring() method.";
-      // console.log(str);
+            const str =
+                "Strings are useful for holding data that can be represented in text form. Some of the most-used operations on strings are to check their length, to build and concatenate them using the + and += string operators, checking for the existence or location of substrings with the indexOf() method, or extracting substrings with the substring() method.";
+            // console.log(str);
 
-      // 1. Length
-      const strLength = str.length;
-      console.log("1. Length :- " + strLength);
+            // 1. Length
+            const strLength = str.length;
+            // console.log("1. Length :- " + strLength);
 
-      // 2. substr(starting_Value, word_number) -> Sub String
-      const subStr = str.substr(0, 100);
-      console.log("Sub String :- " + subStr);
+            // 2. substr(starting_Value, word_number) -> Sub String
+            const subStr = str.substr(0, 100);
+            // console.log("Sub String :- " + subStr);
 
-      // 3. charAt() -> Character access
-      const characterAccess = str.charAt(8);
-      const characterAccess2 = str[5];
-      console.log(characterAccess);
-      // console.log(characterAccess2);
+            // 3. charAt() -> Character access
+            const characterAccess = str.charAt(8);
+            const characterAccess2 = str[5];
+            // console.log(characterAccess);
+            // console.log(characterAccess2);
 
-      // 4. indexOf(searchValue, fromIndex(optional)) -> Location accessed of string
-      const strIndex = str.indexOf("are");
-      const strIndex2 = str.indexOf("z");
-      console.log(strIndex);
-      console.log(strIndex2);
+            // 4. indexOf(searchValue, fromIndex(optional)) -> Location accessed of string
+            const strIndex = str.indexOf("are");
+            const strIndex2 = str.indexOf("z");
+            // console.log(strIndex);
+            // console.log(strIndex2);
 
-      // 5. replace("which", "what") -> String replace
-      const strReplace = str1.replace("quotes", "HiHiHi");
-      console.log(strReplace);
+            // 5. replace("which", "what") -> String replace
+            const strReplace = str1.replace("quotes", "HiHiHi");
+            // console.log(strReplace);
 
-      // 6. lastIndexof(substr, fromIndex)
-      const strLastIndexOf = str.lastIndexOf("are");
-      console.log(strLastIndexOf);
-    </script>
-  </body>
+            // 6. lastIndexof(substr, fromIndex)
+            const strLastIndexOf = str.lastIndexOf("are");
+            // console.log(strLastIndexOf);
+        </script>
+        <script src="methods.js"></script>
+    </body>
 </html>
