--- a/String Methods/index.html
+++ b/String Methods/index.html
@@ -10,6 +10,7 @@
         <h1>String Methods</h1>
 
         <!-- <script src="01_length.js"></script> -->
-        <script src="02_slice.js"></script>
+        <!-- <script src="02_slice.js"></script> -->
+        <script src="03_substring.js"></script>
     </body>
 </html>
