substr() methods exercise

--- a/String Methods/index.html
+++ b/String Methods/index.html
@@ -11,6 +11,7 @@
 
         <!-- <script src="01_length.js"></script> -->
         <!-- <script src="02_slice.js"></script> -->
-        <script src="03_substring.js"></script>
+        <!-- <script src="03_substring.js"></script> -->
+        <script src="04_substr.js"></script>
     </body>
 </html>
