--- a/01 - Variables and Data Types/index.html
+++ b/01 - Variables and Data Types/index.html
@@ -6,7 +6,7 @@
         <title>Variables and Data Types | JavaScript Notes</title>
     </head>
     <body>
-        <div class="h2">Variables and Data Types</div>
-        <script src="script.js"></script>
+        <h2>Variables and Data Types</div>
+        <script src="Variablles.js"></script>
     </body>
 </html>
