init data types and typesof in JavaScript

--- a/01 - Variables and Data Types/index.html
+++ b/01 - Variables and Data Types/index.html
@@ -8,5 +8,6 @@
     <body>
         <h2>Variables and Data Types</div>
         <script src="Variablles.js"></script>
+        <script src="DataTypes.js"></script>
     </body>
 </html>
