undefined type add in javascript note

--- a/01 - Variables and Data Types/index.html
+++ b/01 - Variables and Data Types/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <h2>Variables and Data Types</div>
-        <script src="Variablles.js"></script>
-        <script src="DataTypes.js"></script>
+        <!-- <script src="Variablles.js"></script> -->
+        <!-- <script src="DataTypes.js"></script> -->
+        <script src="01_UndefinedType.js"></script>
     </body>
 </html>
