--- a/01 - Variables and Data Types/index.html
+++ b/01 - Variables and Data Types/index.html
@@ -9,6 +9,7 @@
         <h2>Variables and Data Types</div>
         <!-- <script src="Variablles.js"></script> -->
         <!-- <script src="DataTypes.js"></script> -->
-        <script src="01_UndefinedType.js"></script>
+        <!-- <script src="01_UndefinedType.js"></script> -->
+        <script src="02_NullType.js"></script>
     </body>
 </html>
