Boolean Type added in Javascript Note

--- a/01 - Variables and Data Types/index.html
+++ b/01 - Variables and Data Types/index.html
@@ -10,6 +10,7 @@
         <!-- <script src="Variablles.js"></script> -->
         <!-- <script src="DataTypes.js"></script> -->
         <!-- <script src="01_UndefinedType.js"></script> -->
-        <script src="02_NullType.js"></script>
+        <!-- <script src="02_NullType.js"></script> -->
+        <script src="03_BooleanType.js"></script>
     </body>
 </html>
