Number Conversion and NaN added in JavaScript Note

--- a/01 - Variables and Data Types/index.html
+++ b/01 - Variables and Data Types/index.html
@@ -11,6 +11,7 @@
         <!-- <script src="DataTypes.js"></script> -->
         <!-- <script src="01_UndefinedType.js"></script> -->
         <!-- <script src="02_NullType.js"></script> -->
-        <script src="03_BooleanType.js"></script>
+        <!-- <script src="03_BooleanType.js"></script> -->
+        <script src="04_NumberType.js"></script>
     </body>
 </html>
