StringType in JavaScript...

--- a/01 - Variables and Data Types/index.html
+++ b/01 - Variables and Data Types/index.html
@@ -12,6 +12,7 @@
         <!-- <script src="01_UndefinedType.js"></script> -->
         <!-- <script src="02_NullType.js"></script> -->
         <!-- <script src="03_BooleanType.js"></script> -->
-        <script src="04_NumberType.js"></script>
+        <!-- <script src="04_NumberType.js"></script> -->
+        <script src="05_StringType.js"></script>
     </body>
 </html>
