ObjectType and it's methods added in JavaScript

--- a/01 - Variables and Data Types/index.html
+++ b/01 - Variables and Data Types/index.html
@@ -13,6 +13,7 @@
         <!-- <script src="02_NullType.js"></script> -->
         <!-- <script src="03_BooleanType.js"></script> -->
         <!-- <script src="04_NumberType.js"></script> -->
-        <script src="05_StringType.js"></script>
+        <!-- <script src="05_StringType.js"></script> -->
+        <script src="06_ObjectType.js"></script>
     </body>
 </html>
